--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,30 @@
 
+# Use of `relative_permalinks` ensures post links from the index work properly.
+permalink: pretty
+
 title: Akaseon Study Note
 email: akaseon@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-#twitter_username: jekyllrb
+paginate: 5
+
+github:
+  repo: 'https://github.com/akaseon'
 github_username: akaseon
 
 # Build settings
-markdown: kramdown
+#markdown: kramdown
 #theme: minima
 theme: lanyon
+
+plugins:
+  - jekyll-paginate
 
 category_dir: category/
 tag_dir: tag/
 
-plugins:
-  - jekyll-feed
-#  - jekyll-paginate-v2
-
-# paginate
-#permalink: /:year/:month/
-#pagination:
-#  enabled: true
-#  per_page: 12
-#  sort_reverse: true
-#  sort_field: 'date'
-#  title: ':title'
-#  trail:
-#    before: 2
-#    after: 2
+excerpt_separator: ""
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
